objects/PaymentExpressSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>PxPayKey__c</fullName>
        <label>PX Pay Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PxPayUrl__c</fullName>
        <label>PX Pay Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PxPayUserId__c</fullName>
        <label>PX Pay UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PaymentExpress Settings</label>
</CustomObject>